# var-gen

./: .gitignore  Cargo.toml  README.md  create-installer.bat  install.ps1  mapping-config-example.json  uninstall.ps1
src/: main.rs
src/cli/: mod.rs
src/config/: mapping.rs  mod.rs
src/generator/: mod.rs
src/generator/llm/: mod.rs
src/generator/rule/: mod.rs
src/storage/: mod.rs
src/utils/: error.rs  mod.rs  string.rs
tests/: integration_test.rs
