[package]
name = "var-gen"
version = "0.1.0"
edition = "2021"
description = "A smart variable naming tool powered by LLM"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/var-gen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sled = { version = "0.34", features = ["compression"] }
bincode = "1.3"
jieba-rs = "0.6"
rust-stemmers = "1.2"
dirs = "5.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
once_cell = "1.18"
lazy_static = "1.4"
regex = "1.9"

[dev-dependencies]
tokio-test = "0.4"
insta = "1.31"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[[bin]]
name = "var-gen"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true